--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "mysql2": "^3.10.3"
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.10.3",
+    "pdfkit": "^0.16.0",
+    "pg": "^8.13.1"
   }
 }
