--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "canvas": "^3.1.0",
@@ -19,6 +20,7 @@
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.3",
+    "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
     "pg": "^8.13.1"
   }
