--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
