--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,5 +27,9 @@
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
     "pg": "^8.13.1"
+  }
+  ,
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
